# Bank-Campaign-Success-Prediction

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: sample_data.csv
notebooks/: case_solution.ipynb
src/: __init__.py  api.py  app.py  model_server.py
